--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -1,15 +1,20 @@
-<script src="https://giscus.app/client.js"
-        data-repo="bytecascade11/astrobyte"
-        data-repo-id="R_kgDOQobjBQ"
-        data-category="General"
-        data-category-id="DIC_kwDOQobjBc4C0Dd5"
-        data-mapping="pathname"
-        data-strict="1"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="light"
-        data-lang="en"
-        crossorigin="anonymous"
-        async>
-</script>
+<section aria-label="Comments" class="mt-16">
+  <h2 class="text-2xl font-bold mb-8">Comments</h2>
+  <div class="giscus"></div>
+  <script src="https://giscus.app/client.js"
+          data-repo="bytecascade11/astrobyte"
+          data-repo-id="R_kgDOQobjBQ"
+          data-category="General"
+          data-category-id="DIC_kwDOQobjBc4C0Dd5"
+          data-mapping="pathname"
+          data-strict="1"
+          data-reactions-enabled="1"
+          data-emit-metadata="0"
+          data-input-position="bottom"
+          data-theme="light"
+          data-lang="en"
+          data-loading="lazy"
+          crossorigin="anonymous"
+          async>
+  </script>
+</section>
