--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -1,4 +1,4 @@
-<section aria-label="Comments" class="mt-16">
+<section aria-label="Comments" class="mt-16">bb
   <h2 class="text-2xl font-bold mb-8">Comments</h2>
   <div class="giscus"></div>
   <script src="https://giscus.app/client.js"
